testsuite/deprecated/veronac/codegen/compile-fail/main-method-has-generics.verona
// Copyright Microsoft and Project Verona Contributors.
// SPDX-License-Identifier: MIT
class Main {
  // CHECK-L: main-method-has-generics.verona:${LINE:+1}:3: error: Method 'main' has an invalid signature
  main[X]() { }
}
